[package]
name = "hexasphere"
version = "13.0.0"
authors = ["OptimisticPeach <patrikbuhring@gmail.com>"]
edition = "2018"
description = """
A library to evenly tile hexagons on a sphere.
"""
readme = "readme.md"
repository = "https://github.com/OptimisticPeach/hexasphere.git"
license = "MIT OR Apache-2.0"
keywords = ["gamedev", "graphics", "hexagons", "sphere", "math"]
categories = ["algorithms", "data-structures", "graphics", "mathematics", "rendering::data-formats"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
adjacency = ["tinyvec"]
shape-extras = []

[dependencies]
constgebra = "0.1.4"
glam = "0.28.0"

tinyvec = { version = "1.6.0", optional = true }
